--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+      <%= render 'layouts/partials/navbar' %>
+      <%= render 'layouts/partials/flash' %>
+  
     <%= yield %>
   </body>
 </html>
