--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>List#edit</h1>
-<p>Find me in app/views/list/edit.html.erb</p>
+<h1>Edit List</h1>
+<%= form_for @list do |f| %>
+<%= f.label :user_id %>:
+<%= f.collection_select(:user_id, User.all, :id, :name) %>
+<%= f.text_field :title, placeholder: "Title" %>
+<%= f.submit %>
+<% end %>
+<%= button_to 'Cancel', list_path, method: 'get'%>
+<%= button_to 'Delete', list_path, method: 'delete' %>
