--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Task#edit</h1>
-<p>Find me in app/views/task/edit.html.erb</p>
+<h1>Edit Task</h1>
+<%= form_for @task do |f| %>
+<%= f.label :list_id %>:
+<%= f.collection_select(:list_id, List.all, :id, :title) %>
+<%= f.label :user_id %>:
+<%= f.collection_select(:user_id, User.all, :id, :name) %>
+<%= f.text_field :body, placeholder: "The Task" %>
+<%= f.text_field :details, placeholder: "Additional Details" %>
+<%= f.submit %>
+<% end %>
+<%= button_to 'Cancel', task_path, method: 'get'%>
+<%= button_to 'Delete', task_path, method: 'delete' %>
