--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Homepage</h1>
+<p>Already have an account? Log in now!</p>
+<p>Don't have an account? Sign up here</p>
+
+<p> What is Task-lite?</p>
+<p>Task-lite is my attempt at a lightweight task-management app. It's a, hopefully, easy to use to-do list tool that
+    most anyone should be able to use. 
+</p>
+<p>How it works</p>
+<p>Task-lite uses Ruby on Rails, Bootstrap, and PostgreSQL to manage site navigation, display, and store your tasks and lists.
+    All you have to do is make an account, then press the "make a new list" button, then "make a new task." It's that simple! 
+    Make more lists and tasks, assign tasks to lists, mark them as complete, all of this is available for free.
+    Only the user who owns a list can view the contents of that list!
+</p>
+
+<!-- 
+    <%@users.each do |u| %>
+    create a card for the user and display it IF this will be required for RESTful routing
+    <% end %>
+ -->
