--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,11 +1,10 @@
 <h1>Edit Task</h1>
 <%= form_for @task do |f| %>
 <%= f.label :list_id %>:
-<%= f.collection_select(:list_id, List.all, :id, :title) %>
-<%= f.label :user_id %>:
-<%= f.collection_select(:user_id, User.all, :id, :name) %>
+<%= f.collection_select(:list_id, current_user.lists, :id, :title) %>
 <%= f.text_field :body, placeholder: "The Task" %>
 <%= f.text_field :details, placeholder: "Additional Details" %>
+<%= f.check_box :complete%>
 <%= f.submit %>
 <% end %>
 <%= button_to 'Cancel', task_path, method: 'get'%>
