--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= @task.body %></h2>
 <h2><%= @task.details %></h2>
-<h2><%= @task.completed?.to_s %></h2>
+<h2><%= @task.complete %></h2>
 <br />
 <br />
 <%= button_to 'Edit Task', edit_task_path, method: 'get' %>
