--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,5 @@
 <h1>Create a new list!</h1>
 <%= form_for @list do |f| %>
-<!-- <%= f.label :user_id %>:
-<%= f.collection_select(:user_id, User.all, :id, :name) %> -->
 <%= f.text_field :title, placeholder: "Title" %>
-<%= f.submit %>
+<%= f.submit class: 'btn btn-success'%>
 <% end %>
