--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,21 +1,19 @@
-<h1>List#show</h1>
-
-<h2>This is the list called <%= @list.title %></h2>
-<h3>These are its tasks</h3>
+<h1><%= @list.title %></h1>
+<h3>Tasks</h3>
 <ul>
     <% @tasks.each do |t| %>
     <li>
+        <!-- Conditionally show strikethrough text -->
         <% if t.complete %>
-            <s>
-        <% end %>
-        <%= link_to t.body, task_path(t.id) %>
-        <% if t.complete %>
-        <s/>
+            <s><%= link_to t.body, task_path(t.id) %></s>
+        <% else %>
+            <%= link_to t.body, task_path(t.id) %>
         <% end %>
     </li>
     <% end %>
 </ul>
-<%= button_to 'Add New Task', new_task_path, method: 'get' %>
-<br /> <br />
+<div class="btn-group" role="group" aria-label="Basic example">
+    <%= button_to 'Add New Task', new_task_path, method: 'get', class: 'btn btn-outline-primary' %>
+    <%= button_to 'Edit List', edit_list_path, method: 'get', class: 'btn btn-outline-secondary' %>
+</div>
 
-<%= button_to 'Edit List', edit_list_path, method: 'get' %>
