--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
-<h1>Users#show</h1>
+<h1>Hello <%=@user.name.titleize%></h1>
 
-<h2>Here's <%=@user.name%>'s Lists</h2>
-
-<%= button_to 'Add New List', new_list_path, method: 'get' %>
+<h2>Here are your lists</h2>
 
 <ul>
 <% @lists.each do |l| %>
@@ -13,5 +11,6 @@
 </ul>
 
 <%= button_to 'Add New List', new_list_path, method: 'get' %>
+<%= button_to 'Add New Task', new_task_path, method: 'get' %>
 
 <%= button_to 'Edit User', edit_user_path, method: 'get' %>
