--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,28 +1,18 @@
 <%= form_for @user, :html => {class: ''} do |f| %>
 <h1>Edit Account:</h1>
-<div class="form-group">
-    <div class="row">
-            <div class="col">
-            <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
-            </div>
-            <div class="col">
-                    <%= f.text_field :email, class: "form-control", placeholder: "Email" %>
-            </div>
-    </div>
-</div>
-<div class="form-group">
-    <div class="row">
-            <div class="col">
-                    <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
-            </div>
-
-            <div class="col">
-                    <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
-            </div>
-    </div>
-</div>
-<%= f.submit 'Save Changes', class:"btn btn-outline-primary" %>
+<%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+ <br />
+<%= f.text_field :email, class: "form-control", placeholder: "Email" %>
+<br />
+<%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+<br />
+<%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
+<br />
+<%= f.submit 'Save Changes', class:"btn btn-success" %>
 <% end %>
+<br />
+<div class="btn-group" role="group" aria-label="Basic example">
+                <%= button_to 'Cancel', user_path, method: 'get', class:"btn btn-outline-primary"%>
+                <%= button_to 'Delete', user_path, method: 'delete', class:"btn btn-outline-danger" %>
+</div>
 
-<%= button_to 'Cancel', user_path, method: 'get', class:"btn btn-outline-primary"%>
-<%= button_to 'Delete', user_path, method: 'delete', class:"btn btn-outline-primary" %>
