--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,14 @@
 <%= form_for @user, :html => {class: ''} do |f| %>
 <h1>Create Account:</h1>
-<div class="form-group">
-    <div class="row">
-            <div class="col">
-            <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
-            </div>
-            <div class="col">
-                    <%= f.text_field :email, class: "form-control", placeholder: "Email" %>
-            </div>
-    </div>
-</div>
-<div class="form-group">
-    <div class="row">
-            <div class="col">
-                    <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
-            </div>
-
-            <div class="col">
-                    <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
-            </div>
-    </div>
-</div>
-<%= f.submit 'Create Account', class:"btn btn-outline-primary" %>
+<br />
+<%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+<br />
+<%= f.text_field :email, class: "form-control", placeholder: "Email" %>
+<br />
+<%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+<br />
+<%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm Password" %>
+<br />
+<%= f.submit 'Create Account', class:"btn btn-success" %>
+<br />
 <% end %>
