Styled display for lists and tasks

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,6 +3,8 @@
 <%= f.text_field :title, placeholder: "Title" %>
 <%= f.submit class: 'btn btn-success'%>
 <% end %>
-<br /> <br />
-<%= button_to 'Cancel', user_path(current_user), method: 'get', class: 'btn btn-secondary'%>
+<br />
+<div class="container-fluid">
+    <%= button_to 'Cancel', user_path(current_user), method: 'get', class: 'btn btn-secondary'%>
+<div class="container-fluid"></div>
 
