--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -9,7 +9,9 @@
 <br />
 <%= f.submit class: 'btn btn-success'%> %>
 <% end %>
-<div class="btn-group" role="group" aria-label="Basic example">
-    <%= button_to 'Cancel', task_path, method: 'get', class: 'btn btn-secondary'%>
-    <%= button_to 'Delete', task_path, method: 'delete', class: 'btn btn-danger' %>
+<div class="container-fluid">
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <%= button_to 'Cancel', task_path, method: 'get', class: 'btn btn-secondary'%>
+        <%= button_to 'Delete', task_path, method: 'delete', class: 'btn btn-danger' %>
+    </div>
 </div>
