--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -4,7 +4,9 @@
 <%= f.submit class: 'btn btn-success'%>
 <% end %>
 
-<div class="btn-group" role="group" aria-label="Basic example">
-    <%= button_to 'Cancel', list_path, method: 'get', class: 'btn btn-secondary'%>
-    <%= button_to 'Delete', list_path, method: 'delete', class: 'btn btn-danger' %>
+<div class="container-fluid">
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <%= button_to 'Cancel', list_path, method: 'get', class: 'btn btn-secondary'%>
+        <%= button_to 'Delete', list_path, method: 'delete', class: 'btn btn-danger' %>
+    </div>
 </div>
