--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,16 @@
 
 <h2>Here are your lists</h2>
 
-<ul>
-<% @lists.each do |l| %>
-<li>
-    <%= link_to l.title, list_path(l.id)%>
-</li>
-<% end %>
-</ul>
+<div class="container-fluid">
+    <ul class="list-group" style="list-style:none">
+    <% @lists.each do |l| %>
+    <li>
+        <%= link_to l.title, list_path(l.id), class:"list-group-item list-group-item-action"%>
+    </li>
+    <% end %>
+    </ul>
+</div>
+<br />
 <div class="btn-group" role="group" aria-label="Basic example">
         <%= button_to 'Add New List', new_list_path, method: 'get', class: 'btn btn-secondary' %>
         <%= button_to 'Add New Task', new_task_path, method: 'get', class: 'btn btn-secondary' %>       
