--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,19 +1,43 @@
 <h1>Create a New Task</h1>
 <%= form_for @task do |f| %>
-<%= f.label :list_id %>:
-<%= f.collection_select(:list_id, current_user.lists, :id, :title) %>
-<%= f.text_field :body, placeholder: "The Task" %>
-<%= f.text_area :details, placeholder: "Additional Details" %>
 
 
-<%= f.label "Is this task complete?"%>
-<%= f.check_box :complete%>
-
-
-<br />
-<%= f.submit class: 'btn btn-success'%>
-<% end %>
-<br /><br />
 <div class="container-fluid">
-    <%= button_to 'Cancel', user_path(current_user), method: 'get', class: 'btn btn-secondary'%>
+    <div class="row">
+        <div class="col">
+               <%=f.label "Select List:"%> <%= f.collection_select :list_id, current_user.lists, :id, :title, class: "btn btn-default dropdown-toggle"%>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col">
+            <%= f.text_field :body, placeholder: "The Task", class:"form-control" %>
+        </div>
+        <div class="col form-check">
+                <%= f.check_box :complete, class: "form-check-input"%>
+                <%= f.label "Task Complete?"%>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <%= f.text_area :details, placeholder: "Additional Details", class:"form-control"%>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <br />
+                <%= f.submit class: 'btn btn-success'%>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col">
+            <br />
+            <%= button_to 'Cancel', user_path(current_user), method: 'get', class: 'btn btn-secondary'%>
+        </div>
+    </div>
+ 
 </div>
+
+<% end %>
