--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -24,20 +24,14 @@
             <%= f.text_area :details, placeholder: "Additional Details", class:"form-control"%>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
             <br />
-                <%= f.submit class: 'btn btn-success'%>
-        </div>
-
+</div>
+<div class="container-fluid">
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <%= f.submit class: 'btn btn-success'%>
+        <% end %>
+        <%= button_to 'Cancel', user_path(current_user), method: 'get', class: 'btn btn-secondary'%>
     </div>
-    <div class="row">
-        <div class="col">
-            <br />
-            <%= button_to 'Cancel', user_path(current_user), method: 'get', class: 'btn btn-secondary'%>
-        </div>
-    </div>
- 
 </div>
 
-<% end %>
+
