--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,25 @@
-<h1>Homepage</h1>
-<p>Already have an account? Log in now!</p>
-<p>Don't have an account? Sign up here</p>
 
-<p> What is Task-lite?</p>
-<p>Task-lite is my attempt at a lightweight task-management app. It's a, hopefully, easy to use to-do list tool that
-    most anyone should be able to use. 
-</p>
-<p>How it works</p>
-<p>Task-lite uses Ruby on Rails, Bootstrap, and PostgreSQL to manage site navigation, display, and store your tasks and lists.
-    All you have to do is make an account, then press the "make a new list" button, then "make a new task." It's that simple! 
-    Make more lists and tasks, assign tasks to lists, mark them as complete, all of this is available for free.
-    Only the user who owns a list can view the contents of that list!
-</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-3">Task-lite</h1>
+        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+
+        <p class="my-4"> <b>What is Task-lite?</b></p>
+        <p class="my-10">Task-lite is my attempt at a lightweight task-management app. It's a, hopefully, easy to use to-do list tool that
+            most anyone should be able to use. </p>
+        <p class="my-4"><b>How it works</b></p>
+        <p class="my-10">Task-lite uses Ruby on Rails, Bootstrap, and PostgreSQL to manage site navigation, display, and store your tasks and lists.
+            All you have to do is make an account, then press the "make a new list" button, then "make a new task." It's that simple! 
+            Make more lists and tasks, assign tasks to lists, mark them as complete, all of this is available for free.
+            Only the user who owns a list can view the contents of that list!
+        </p>
+        <p class="lead">
+                <a class="btn btn-primary btn-lg" href=<%= new_session_path %> role="button">Log In</a>
+                <a class="btn btn-primary btn-lg" href=<%= new_user_path %> role="button">Sign Up</a>
+        </p>
+    </div>
+</div>
+
+
+
 
