--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,6 @@
 <div class="btn-group" role="group" aria-label="Basic example">
         <%= button_to 'Add New List', new_list_path, method: 'get', class: 'btn btn-secondary' %>
         <%= button_to 'Add New Task', new_task_path, method: 'get', class: 'btn btn-secondary' %>       
-        <%= button_to 'Edit User', edit_user_path, method: 'get', class: 'btn btn-secondary' %>
+        <%= button_to 'Edit Account', edit_user_path, method: 'get', class: 'btn btn-secondary' %>
 </div>
 
