--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -18,6 +18,10 @@
                 <%= f.label "Task Complete?"%>
 
         </div>
+        <div class="col form-check">
+                <%= f.check_box :priority, class: "form-check-input"%>
+                <%= f.label "Priority Task?"%>
+        </div>
     </div>
     <div class="row">
         <div class="col">
