--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -8,10 +8,10 @@
           <ul class="navbar-nav mr-auto">
               <% if logged_in?%>
               <li class="nav-item">
-              <%= link_to 'logout', logout_path, method: 'delete', class: 'nav-link' %>
+              <%= link_to 'Log Out', logout_path, method: 'delete', class: 'nav-link' %>
               </li>
               <li class="nav-item">
-              <%= link_to current_user.name, user_path(current_user), class: 'nav-link' %>
+              <%= link_to (current_user.name), user_path(current_user), class: 'nav-link' %>
               </li>
               <% else %>
               <li class="nav-item">
