--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,11 @@
-<h1>Hello <%=@user.name.titleize%></h1>
-
-<h2>Here are your lists</h2>
-
+<br />
+<h4>Lists</h4>
+<br />
 <div class="container-fluid">
     <ul class="list-group" style="list-style:none">
     <% @lists.each do |l| %>
     <li>
-        <%= link_to l.title, list_path(l.id), class:"list-group-item list-group-item-action"%>
+        <%=link_to (icon('list') + ' ' + l.title), list_path(l.id), class:"list-group-item list-group-item-action"%>
     </li>
     <% end %>
     </ul>
